--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,5 @@
 language: python
-script: ./tests/test_suite.py
+install:
+  - pip install -r requirements.txt
+script: 
+  - python tests/test_suite.py
